<resources>
    <string name="app_name">メモ帳</string>

    <string name="menu_save">保存</string>
    <string name="menu_open">開く</string>
    <string name="menu_new">新規作成</string>
    <string name="folder">フォルダー</string>
    <string name="view">ビュー</string>
    <string name="draw">お絵描き</string>

    //保存関係の日本語
    <string name="save">保存</string>
    <string name="delete">破棄</string>
    <string name="Save">保存しました</string>
    <string name="SaveError">保存に失敗しました</string>
    <string name="FileError">保存されたファイルが見つかりません</string>
    <string name="Error">エラーが発生しました</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="DrawNoteK_Activity">DrawNoteK</string>


    //ここから順番に新規作成・設定・共有・削除ボタン
    <string name="action_add">編集画面</string>
    <string name="action_setting">設定</string>
    <string name="action_share">共有</string>
    <string name="action_delete">削除</string>
    <string name="action_draw">お絵描き</string>
    <string name="action_eraser">消しゴム</string>

    //お絵かきの色設定
    <string name="yellow">黄</string>
    <string name="cyan">シアン</string>
    <string name="sc">肌色</string>
    <string name="gray">灰色</string>
    <string name="brown">茶色</string>
    <string name="magenta">マゼンタ</string>

    //その他日本語の設定
    <string name="white">白</string>
    <string name="black">黒</string>
    <string name="red">赤</string>
    <string name="blue">青</string>
    <string name="green">緑</string>
    <string name="pink">ピンク</string>
    <string name="orange">オレンジ</string>
    <string name="purple">紫</string>
    <string name="gothic">ゴシック</string>
    <string name="MSgothic">MSゴシック</string>
    <string name="mintyo">明朝体</string>
    <string name="on">あり</string>
    <string name="off">なし</string>
    <string name="cancel">キャンセル</string>
    <string name="background">背景</string>
    <string name="font">書式</string>
    <string name="line">罫線</string>
    <string name="setbackground">背景を選んでください</string>
    <string name="setfont">書式を選んでください</string>
    <string name="imageDelete">画像削除</string>
    <string name="deleteM">選択した画像を削除しました</string>
    <string name="openM">画像を開きました</string>
    <string name="Thick">線と消しゴムの太さ</string>
    <string name="close">閉じる</string>
    <string name="Non">塗りつぶしON</string>
    <string name="Noff">塗りつぶしOFF</string>
    //設定画面のタイトル
    <string name="Setting_Activity">設定画面</string>

    <string name="memodb_empty">memo</string>

    //左側のメニュー
    <string name="title_section1">新規作成</string>
    <string name="title_section2">フォルダー</string>
    <string name="title_section3">画像プレビュー</string>

    //フォルダー
    <string name="folder_item_delete">削除</string>

    <string name="login">ログイン</string>
    <string name="colorSet">色設定</string>
    <string name="share">共有する</string>

    <string name="submit">送信</string>
    <string name="get">取得</string>

</resources>
