<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    //お絵描き画面のアクションバー設定
    //順番にペンシル・消しゴム・共有・削除・保存ボタン


    <item
        android:id="@+id/images"
        android:orderInCategory="1"
        app:showAsAction=""
        android:title="@string/title_section3"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/imageDelete"
        android:orderInCategory="1"
        app:showAsAction=""
        android:title="@string/imageDelete"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/black"
        android:orderInCategory="1"
        app:showAsAction=""
        android:title="@string/black"
        android:icon="@android:drawable/ic_dialog_dialer"/>

    <item
        android:id="@+id/red"
        android:orderInCategory="1"
        app:showAsAction=""
        android:title="@string/red"
        android:icon="@android:drawable/ic_dialog_dialer"/>

    <item
        android:id="@+id/green"
        android:orderInCategory="1"
        app:showAsAction=""
        android:title="@string/green"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/blue"
        android:orderInCategory="1"
        app:showAsAction=""
        android:title="@string/blue"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/yellow"
        android:orderInCategory="1"
        app:showAsAction=""
        android:title="@string/yellow"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/cyan"
        android:orderInCategory="1"
        app:showAsAction=""
        android:title="@string/cyan"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/sc"
        android:orderInCategory="1"
        app:showAsAction=""
        android:title="@string/sc"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/gray"
        android:orderInCategory="1"
        app:showAsAction=""
        android:title="@string/gray"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/brown"
        android:orderInCategory="1"
        app:showAsAction=""
        android:title="@string/brown"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/magenta"
        android:orderInCategory="1"
        app:showAsAction=""
        android:title="@string/magenta"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/action_eraser"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title=""
        android:icon="@android:drawable/ic_input_delete"/>


    <!--<item-->
        <!--android:id="@+id/action_share"-->
        <!--android:orderInCategory="1"-->
        <!--app:showAsAction="always"-->
        <!--android:title="@string/action_share"-->
        <!--android:icon="@android:drawable/ic_menu_share"/>-->

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"/>

    <item
        android:id="@+id/action_save"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/save"
        android:icon="@android:drawable/ic_menu_save"/>



</menu>


