<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    //以下順番に新規作成・設定・共有・削除ボタン
    <!--<item-->
        <!--android:id="@+id/action_add"-->
        <!--android:orderInCategory="1"-->
        <!--app:showAsAction="always"-->
        <!--android:title="@string/action_add"-->
        <!--android:icon="@android:drawable/ic_menu_add"/>-->

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/action_setting"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/action_pencil"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/action_draw"
        android:icon="@android:drawable/ic_menu_edit"/>

    <item
        android:id="@+id/action_del"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"/>

    <item android:id="@+id/menu_save"
        android:orderInCategory="4"
        app:showAsAction="always"
        android:title="@string/menu_save"
        android:icon="@android:drawable/ic_menu_save" />

    <item android:id="@+id/menu_request"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="send"
        android:icon="@android:drawable/ic_menu_send" />


    <!--<item android:id="@+id/menu_open"-->
    <!--android:title="@string/menu_open"-->
    <!--android:icon="@android:drawable/ic_menu_set_as" />-->

    <!--<item android:id="@+id/menu_new"-->
    <!--android:title="@string/menu_new"-->
    <!--android:icon="@android:drawable/ic_menu_add" />-->

</menu>
